--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@mantine/core": "7.15.0",
+    "@mantine/form": "^7.15.2",
     "@mantine/hooks": "7.15.0",
     "@mantinex/mantine-logo": "^1.1.0",
     "@next/bundle-analyzer": "^14.2.4",
