--- a/package.json
+++ b/package.json
@@ -31,13 +31,17 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
+    "@directus/sdk": "^18.0.3",
+    "@mantine/carousel": "^7.15.2",
     "@mantine/core": "7.15.0",
     "@mantine/form": "^7.15.2",
     "@mantine/hooks": "7.15.0",
     "@mantinex/mantine-logo": "^1.1.0",
     "@next/bundle-analyzer": "^14.2.4",
     "@tabler/icons-react": "^3.6.0",
+    "embla-carousel-react": "^8.5.1",
     "next": "15.0.1",
+    "next-auth": "^4.24.11",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
