--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@mantinex/mantine-logo": "^1.1.0",
     "@next/bundle-analyzer": "^14.2.4",
     "@tabler/icons-react": "^3.6.0",
+    "framer-motion": "^12.4.11",
     "next": "15.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1"
