--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@mantine/core": "7.15.0",
     "@mantine/form": "^7.15.2",
     "@mantine/hooks": "7.15.0",
