--- a/package.json
+++ b/package.json
@@ -78,5 +78,8 @@
     "typescript": "5.5.2",
     "typescript-eslint": "^8.14.0"
   },
-  "packageManager": "yarn@4.5.3"
+  "packageManager": "yarn@4.5.3",
+  "engines": {
+    "node": "20.x"
+  }
 }
